# cut-the-rope-tv

./: camera_calib.py  face_detection.py  main.py  media_pipe_hand.py  pyproject.toml  tv-control.py  website-control.py
